fix - filter messages list by user

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,7 +5,7 @@
 <div>
     <hr />
     <a href="<%= messages_path %>">All Messages</a> |
-    <a href="<%= messages_path(filter: 'me') %>">My Messages</a> |
+    <a href="<%= messages_path(filter: 'Emeka Chinedu') %>">My Messages</a> |
     <strong><a class="btn btn-primary" href="<%= new_message_path %>" role="button">Add a Message</a></strong>
 </div>
 
